fixing about section mobile

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -27,8 +27,9 @@ h1 {
   flex-flow: column;
   align-items: center;
   max-width: 1120px;
-  width: 90%;
+  width: 80%;
   margin: 0 auto;
+  justify-content: center;
 }
 
 .panels__items {
@@ -48,6 +49,10 @@ h1 {
 }
 
 @media only screen and (max-width: 768px) {
+  .about {
+    padding: 0;
+  }
+
   .panels__item {
     margin-bottom: 2rem;
   }
@@ -58,10 +63,20 @@ h1 {
 
   .about_container {
     width: 100%;
-    margin: 0 auto;
+    /* margin: 0 auto; */
+    text-align: center;
   }
 
   .about_container > h1 {
     font-size: 18px;
+    width: 100%;
+  }
+
+  .panels__container {
+    width: 100%;
+  }
+
+  .panels__items {
+    margin: 0 auto;
   }
 }
