--- a/src/components/Header/Navbar.css
+++ b/src/components/Header/Navbar.css
@@ -90,8 +90,8 @@
     /* height: 80%; */
     position: absolute;
     top: 80px;
-    left: -100%;
-    opacity: 1;
+    /* left: -100%; */
+    opacity: 0;
     transition: all 0.5s ease;
   }
 
