--- a/src/components/Tokenomics/Tokenomics.css
+++ b/src/components/Tokenomics/Tokenomics.css
@@ -67,3 +67,9 @@ h1 {
     margin: 20px auto;
   }
 }
+
+@media only screen and (max-width: 768px) {
+  h1 {
+    font-size: 20px;
+  }
+}
